[package]
name = "aoc2025"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.11"
anyhow = "1.0.94"
bitvec = "1.0.1"
bnum = "0.12.0"
clap = { version = "4.5.21", features = ["derive"] }
colored = "2.1.0"
crossterm = "0.28.1"
dashmap = "6.1.0"
derive_more = { version = "1.0.0", features = ["full"] }
divan = "0.1.16"
itertools = "0.13.0"
memchr = "2.7.6"
nalgebra = "0.33.2"
nom = "7.1.3"
num-traits = "0.2.19"
rand = "0.8.5"
rayon = "1.10.0"
regex = "1.11.1"

[[bench]]
name = "benchmarks"
harness = false
