[package]
name = "aoc2025"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.11"
anyhow = "1.0.94"
bitvec = "1.0.1"
clap = { version = "4.5.21", features = ["derive"] }
colored = "2.1.0"
dashmap = "6.1.0"
derive_more = { version = "1.0.0", features = ["full"] }
divan = "0.1.16"
image = { version = "0.25.9", default-features = false, features = ["png", "jpeg", "webp", "rayon"] }
inventory = "0.3.21"
itertools = "0.13.0"
memchr = "2.7.6"
rand = "0.8.5"
rayon = "1.10.0"
regex = "1.11.1"
